// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders divider 1`] = `
<View
  aria-hidden={true}
  style={
    [
      {
        "height": 1,
      },
      {
        "backgroundColor": "rgba(202, 196, 208, 1)",
      },
      false,
      false,
      undefined,
    ]
  }
/>
`;

exports[`renders vertical divider 1`] = `
<View
  aria-hidden={true}
  style={
    [
      {
        "alignSelf": "stretch",
        "width": 1,
      },
      {
        "backgroundColor": "rgba(202, 196, 208, 1)",
      },
      false,
      false,
      undefined,
    ]
  }
/>
`;
